[gd_scene load_steps=24 format=2]

[ext_resource path="res://Levels/Global.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level3.png" type="Texture" id=2]
[ext_resource path="res://torch.tscn" type="PackedScene" id=3]
[ext_resource path="res://Janek.tscn" type="PackedScene" id=4]
[ext_resource path="res://items/heart.png" type="Texture" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://ExperienceBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/Bolce.gd" type="Script" id=8]
[ext_resource path="res://other/wall.png" type="Texture" id=9]
[ext_resource path="res://lever.gd" type="Script" id=10]
[ext_resource path="res://other/lever_on.png" type="Texture" id=11]
[ext_resource path="res://other/lever_off.png" type="Texture" id=12]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=13]
[ext_resource path="res://Death.tscn" type="PackedScene" id=14]
[ext_resource path="res://dialogue/DialogueBox.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Skills.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Jegomosc.tscn" type="PackedScene" id=17]
[ext_resource path="res://Zombie.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Quest/Quest.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 91.3061, 17.9489 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 68.4198, 15.8278 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.7876, 68.5136 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 20.3568
height = 0.749146

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Level" type="StaticBody2D" parent="."]
position = Vector2( 1670.84, 410.586 )
scale = Vector2( 0.713127, 0.713127 )

[node name="Level3" type="Sprite" parent="Level"]
position = Vector2( -2.79565, 3.51233 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level"]
visible = false
position = Vector2( -2343.56, -575.755 )
scale = Vector2( 1.40228, 1.40228 )
polygon = PoolVector2Array( 9.57687, 476.206, 8.85425, 305.799, 95.0261, 259.259, 143.669, 203.796, 188.162, 174.336, 279.446, 115.631, 324.555, 77.3996, 689.433, 79.3899, 1009.07, 78.7264, 1097.71, 154.601, 1101.87, 203.063, 1057.21, 201.676, 1054.44, 157.849, 1011.72, 155.629, 1010.33, 111.525, 829.05, 112.357, 827.385, 156.462, 689.246, 157.016, 688.769, 109.907, 327.479, 111.521, 326.191, 156.607, 281.656, 156.975, 280.736, 202.245, 190.012, 202.613, 189.445, 247.954, 144.504, 248.147, 142.209, 293.143, 98.993, 294.163, 99.3335, 338.435, 51.9965, 338.776, 53.1053, 477.827, 189.855, 478.491, 190.353, 523.997, 326.704, 523.997, 326.704, 478.658, 600.427, 478.647, 600.515, 661.074, 783.337, 661.374, 783.294, 387.561, 965.728, 387.321, 965.805, 341.693, 1285.09, 341.541, 1286.86, 522.465, 1421.94, 522.465, 1420.86, 385.757, 1695.99, 387.447, 1696.36, 432.351, 1907.26, 432.968, 1969.65, 432.642, 1969.59, 293.111, 1924.73, 293.111, 1924.12, 247.437, 1878.04, 247.437, 1878.82, 202.597, 1833.01, 202.096, 1832.76, 156.284, 1792.88, 156.42, 1793.01, 184.349, 1815.86, 210.472, 1813.59, 210.472, 1814.23, 279.268, 1817.28, 279.538, 1817.64, 284.569, 1756.09, 284.433, 1755.99, 279.179, 1810.55, 278.907, 1810.79, 210.647, 1756.07, 209.947, 1778.44, 184.916, 1779.25, 156.337, 1649.86, 156.464, 1648.86, 110.651, 1285.66, 112.693, 1284.98, 157.305, 1192.7, 157.294, 1193.71, 202.939, 1147.93, 202.473, 1146.72, 159.008, 1188.27, 141.64, 1246.16, 103.498, 1262.85, 93.6217, 1286.01, 74.1102, 1649.1, 76.4669, 1877.84, 146.913, 1969.65, 267.598, 1999.61, 268.985, 1997.67, 472.862, 1696.74, 473.482, 1683.53, 431.974, 1465, 429.525, 1469.86, 567.314, 1241.83, 565.152, 1242.33, 383.144, 992.135, 384.281, 992.135, 425.234, 823.998, 426.371, 828.86, 705.163, 556.247, 704.744, 554.766, 555.366, 71.4297, 546.32 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Level"]
visible = false
polygon = PoolVector2Array( -1385.19, 62.9705, -1298.86, 63.5275, -1299.41, 72.4393, -1303.87, 71.8823, -1305.54, 163.229, -1297.18, 172.698, -1304.98, 182.167, -1380.73, 182.724, -1389.09, 174.926, -1382.41, 165.457, -1381.29, 71.8823, -1385.75, 72.4393 )

[node name="torch" parent="Level" instance=ExtResource( 3 )]
position = Vector2( -1531.84, -75.5978 )
scale = Vector2( 8.81666, 8.81666 )

[node name="torch2" parent="Level" instance=ExtResource( 3 )]
position = Vector2( -1214.87, -206.115 )
scale = Vector2( 8.81666, 8.81666 )

[node name="torch3" parent="Level" instance=ExtResource( 3 )]
position = Vector2( -578.661, -245.716 )
scale = Vector2( 8.81666, 8.81666 )

[node name="torch4" parent="Level" instance=ExtResource( 3 )]
position = Vector2( -0.554932, -187.724 )
scale = Vector2( 8.81666, 8.81666 )

[node name="torch5" parent="Level" instance=ExtResource( 3 )]
position = Vector2( -1983.1, -12.1703 )
scale = Vector2( 8.81666, 8.81666 )

[node name="torch6" parent="Level" instance=ExtResource( 3 )]
position = Vector2( 256.722, -151.402 )
scale = Vector2( 8.81666, 8.81666 )

[node name="Janek" parent="." instance=ExtResource( 4 )]
position = Vector2( 102.173, 415.653 )

[node name="UI" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="UI"]

[node name="Health" type="Control" parent="UI/UI"]
margin_left = -4.0
margin_top = -10.0
margin_right = 36.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health0" type="NinePatchRect" parent="UI/UI/Health"]
margin_left = 20.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="Health1" type="NinePatchRect" parent="UI/UI/Health"]
margin_left = 110.0
margin_top = 20.0
margin_right = 180.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="Health2" type="NinePatchRect" parent="UI/UI/Health"]
margin_left = 200.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="Health3" type="NinePatchRect" parent="UI/UI/Health"]
margin_left = 290.0
margin_top = 20.0
margin_right = 360.0
margin_bottom = 80.0
texture = ExtResource( 5 )

[node name="Control" type="Control" parent="UI/UI"]
margin_left = 58.0
margin_top = -13.0
margin_right = 98.0
margin_bottom = 27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin" type="NinePatchRect" parent="UI/UI/Control"]
margin_left = 740.0
margin_top = 20.0
margin_right = 800.0
margin_bottom = 80.0
texture = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="UI/UI/Control"]
margin_left = 809.0
margin_top = 22.0
margin_right = 829.0
margin_bottom = 42.0
rect_min_size = Vector2( 5, 5 )
rect_scale = Vector2( 4, 4 )
tab_size = 1
text = "0"

[node name="Fps counter" type="Control" parent="UI/UI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="ExperienceBar" parent="UI/UI" instance=ExtResource( 7 )]

[node name="Bolce" type="Area2D" parent="."]
position = Vector2( 636.004, 641.544 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bolce"]
position = Vector2( 55.4403, 1.02667 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bolce"]
position = Vector2( 717.386, -135.739 )
shape = SubResource( 2 )

[node name="wall" type="KinematicBody2D" parent="."]

[node name="wall" type="Sprite" parent="wall"]
position = Vector2( 1125.09, 272.792 )
scale = Vector2( 0.681202, 0.713127 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
visible = false
position = Vector2( 1124.94, 272.655 )
shape = SubResource( 3 )

[node name="lever" type="Area2D" parent="."]
position = Vector2( 996.714, 320.914 )
scale = Vector2( 1.23051, 1.23051 )
script = ExtResource( 10 )

[node name="lever_on" type="Sprite" parent="lever"]
visible = false
position = Vector2( -0.193359, -0.0178528 )
texture = ExtResource( 11 )

[node name="lever_off" type="Sprite" parent="lever"]
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="lever"]
position = Vector2( -0.16571, 0 )
shape = SubResource( 4 )

[node name="Pause" type="CanvasLayer" parent="."]

[node name="Pause" parent="Pause" instance=ExtResource( 13 )]
visible = false
margin_left = -0.227394
margin_top = -0.0179996
margin_right = -0.227478
margin_bottom = -0.0180054

[node name="Death" type="CanvasLayer" parent="."]

[node name="Death" parent="Death" instance=ExtResource( 14 )]
visible = false
margin_left = -0.352844
margin_top = -1.13055
margin_right = -0.352844
margin_bottom = -1.13055

[node name="Dialogue" type="CanvasLayer" parent="."]

[node name="Dialogue" parent="Dialogue" instance=ExtResource( 15 )]
visible = false
margin_left = 0.112793
margin_top = 0.265839
margin_right = 0.112793
margin_bottom = 0.265869

[node name="Quest" parent="Dialogue" instance=ExtResource( 19 )]
margin_left = 786.0
margin_top = 396.0
margin_right = 155.0
margin_bottom = 142.0

[node name="Skills" type="CanvasLayer" parent="."]

[node name="Skills" parent="Skills" instance=ExtResource( 16 )]
visible = false

[node name="Jegomosc" parent="." instance=ExtResource( 17 )]
position = Vector2( 1228.76, 303.557 )

[node name="MainCam" type="Camera2D" parent="."]
position = Vector2( 1232.63, 298.806 )
smoothing_enabled = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="Zombie" parent="." instance=ExtResource( 18 )]
position = Vector2( 1058.69, 321.828 )

[node name="Zombie2" parent="." instance=ExtResource( 18 )]
position = Vector2( 1563.9, 356.303 )
[connection signal="point_change" from="UI/UI/ExperienceBar" to="Skills/Skills" method="_on_ExperienceBar_point_change"]
[connection signal="body_entered" from="Bolce" to="Bolce" method="_on_Bolce_body_entered"]
[connection signal="body_entered" from="Bolce" to="Janek" method="_on_Bolce_body_entered"]
[connection signal="body_entered" from="lever" to="lever" method="_on_lever_body_entered"]
[connection signal="body_exited" from="lever" to="lever" method="_on_lever_body_exited"]
[connection signal="exp_gain" from="Zombie" to="UI/UI/ExperienceBar" method="_on_Zombie_exp_gain"]
[connection signal="exp_gain" from="Zombie2" to="UI/UI/ExperienceBar" method="_on_Zombie_exp_gain"]
